# test-repo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  release.yml
hooks/: post_gen_project.py
src/test_repo/: __init__.py
tests/: test_foo.py
{{ cookiecutter.project_slug }}/: LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/_licenses/: AGPL-3.0-only.txt
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_foo.py
