[project]
name = "test-repo"
version = "0.1.0"
description = "Python package template with src layout and modern tooling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-repo = "test_repo:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-v",
    "--durations=10",
    "--cov=test_repo",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Formatter: missing trailing comma
    "D203",    # 1 blank line before class docstring
    "D213",    # Multi-line docstring summary second line
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",    # Use of assert
    "ANN",     # Type annotations
    "D",       # Docstrings
    "INP001",  # Implicit namespace package (tests don't need __init__.py)
]
"**/__init__.py" = [
    "D104",    # Missing docstring in public package
]
